# esgf-wut

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
esgf_wut/: __init__.py  core.py
esgf_wut/cli/: __init__.py
esgf_wut/data/: database_facets.yaml  esgf_cv_universe.db
