[project]
name = "esgf-wut"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "typer>=0.19.2",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
version_file = "esgf_wut/_version.py"
version_file_template = '__version__ = "{version}"'

[tool.setuptools.package-data]
esgf_wut = ["data/*"]

[project.scripts]
wut = "esgf_wut.cli:app"
